fixing file names and spacing on create account page

--- a/front-end/css_files/create_acct_style.css
+++ b/front-end/css_files/create_acct_style.css
@@ -20,6 +20,7 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     margin: 100px auto;
     flex: 0 0 auto;
+    margin-top: -10px;
 }
 
 h1 {
@@ -28,11 +29,6 @@ h1 {
 
 .form-group {
     margin-bottom: 20px;
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
 }
 
 input[type="text"],
@@ -69,6 +65,7 @@ input[type="password"] {
     font-size: 14px;
     color: #fff;
     flex-shrink: 0;
+    margin-top: 119px;
 }
 
 #site_footer .footer-links {
